# Sorque

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js  vite.config.js
data/: sorque.db
data/seeds/: demo_save.yaml
data/worlds/: escape_house_01.json  house_start.json
docs/: ARCHITECTURE.md  GDD_LINKS.md  PROMPT_GUIDE.md  STYLE_GUIDE.md
prompts/: action_outcome.txt  dialog.txt  environment.txt  romance.txt
schemas/: edge.schema.json  item.schema.json  location.schema.json  npc.schema.json  quest.schema.json
scripts/: generate-images.js  validate_world.py
src/: App.jsx  __init__.py  constants.js
src/adapters/: __init__.py  llm_client.py
src/app/: __init__.py  app.py  ui_components.py
src/backend/: __init__.py  action_router.py  content_service.py  oo.py  oo_loader.py  state_manager.py  world_loader.py
src/components/: ActionBar.jsx  CompassPanel.jsx  DeathOverlay.jsx  GameLayout.jsx  InventoryPanel.jsx  ScenePanel.jsx  StoryPanel.jsx
src/engine/: DescOverride.js  Exit.js  Game.js  Interaction.js  Room.js  WorldLoader.js  index.js
src/hooks/: useGame.js
src/services/: imageGen.js  llm.js  persistence.js
src/styles/: ActionBar.css  CompassPanel.css  StoryPanel.css  theme.css
src_bak/adapters/: llm_client.py  storage.py
src_bak/backend/: action_router.py  content_service.py  rules_engine.py  safety_filter.py  state_manager.py
uiworkshop/: ui_workshop.py
world/: __init__.py  items.yaml  npcs.yaml
world_bak/: items.yaml  npcs.yaml  quests.yaml
(+11 files in other folders)
