
[project]
name = "sorque"
version = "0.0.1"
description = "Sorque: a Zork-like, button-driven adventure on a premade graph with LLM-grounded prose."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="Your Name", email="you@example.com"}]
dependencies = []

[tool.black]
line-length = 100
